infra/k8s/comments-depl.yaml
# Create the Cluster IP service for the event bus
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector:
    app: comments #what pods we allow access to this service
  type: ClusterIP #type of service (Optional)
  ports:
    - name: comments
      protocol: TCP
      port: 4000
      targetPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector: #what pods to expose to the outside world
    app: comments #try to find pods with this label and expose them (We have to add this label to the pods in comments-depl.yaml)
  ports:
    - name: comments #name of the port
      protocol: TCP
      port: 4000 #port for the node port service
      targetPort: 4000 #port for the pod
      nodePort: 31516 #port exposed to the outside world (Where client can access the service)
