infra/k8s/event-bus-depl.yaml
# Create the Cluster IP service for the event bus
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus #what pods we allow access to this service
  type: ClusterIP #type of service (Optional)
  ports:
    - name: event-bus
      protocol: TCP
      port: 5555
      targetPort: 5555
