infra/k8s/moderation-depl.yaml
# Create the Cluster IP service for the event bus
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation #what pods we allow access to this service
  type: ClusterIP #type of service (Optional)
  ports:
    - name: moderation
      protocol: TCP
      port: 3002
      targetPort: 3002

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: NodePort
  selector: #what pods to expose to the outside world
    app: moderation #try to find pods with this label and expose them (We have to add this label to the pods in moderation-depl.yaml)
  ports:
    - name: moderation #name of the port
      protocol: TCP
      port: 3002 #port for the node port service
      targetPort: 3002 #port for the pod
      nodePort: 31517 #port exposed to the outside world (Where client can access the service)
