infra/k8s/query-depl.yaml
# Create the Cluster IP service for the event bus
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query #what pods we allow access to this service
  type: ClusterIP #type of service (Optional)
  ports:
    - name: query
      protocol: TCP
      port: 6000
      targetPort: 6000

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector: #what pods to expose to the outside world
    app: query #try to find pods with this label and expose them (We have to add this label to the pods in query-depl.yaml)
  ports:
    - name: query #name of the port
      protocol: TCP
      port: 6000 #port for the node port service
      targetPort: 6000 #port for the pod
      nodePort: 31518 #port exposed to the outside world (Where client can access the service)
